<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/reg_country_info_cl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/layout_margin"
    android:layout_marginTop="@dimen/layout_margin"
    android:layout_marginRight="@dimen/layout_margin"
    app:layout_constraintTop_toBottomOf="@id/reg_radio_btn">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/reg_name_cl"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/edit_selector"
        android:paddingLeft="17dp"
        android:paddingRight="17dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/reg_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/my_account_name"
            android:textColor="@color/black5050"
            android:textSize="10sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/reg_name_et"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="8dp"
            android:background="@null"
            android:hint="@string/name_hint"
            android:lines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/reg_name_tv" />
        <!--android:onTextChanged="@{activity::onTextChanged}"-->
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/reg_phone_cl"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/edit_selector"
        android:paddingLeft="17dp"
        android:paddingRight="17dp"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/reg_name_cl">

        <TextView
            android:id="@+id/reg_phone_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/my_account_phone"
            android:textColor="@color/black5050"
            android:textSize="10sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/reg_phone_et"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="8dp"
            android:background="@null"
            android:hint="@string/phone_hint"
            android:lines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@id/reg_phone_tv" />
        <!--android:onTextChanged="@{activity::onTextChanged}"-->
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/reg_country_cl"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/edit_selector"
        android:paddingLeft="17dp"
        android:paddingRight="17dp"
        app:layout_constraintTop_toBottomOf="@id/reg_phone_cl">

        <TextView
            android:id="@+id/reg_country_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/country"
            android:textColor="@color/black5050"
            android:textSize="10sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/reg_country_select_tv"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/country_select_title"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/reg_country_tv" />

        <ImageView
            android:id="@+id/dropdown_icon"
            android:layout_width="13.9dp"
            android:layout_height="7.8dp"
            android:layout_marginTop="24.1dp"
            android:src="@drawable/dropdown_icon_down"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!--                <Spinner-->
        <!--                    android:id="@+id/reg_country_sp"-->
        <!--                    android:layout_width="match_parent"-->
        <!--                    android:layout_height="40dp"-->
        <!--                    app:layout_constraintTop_toBottomOf="@id/reg_country_tv"-->
        <!--                    app:layout_constraintLeft_toLeftOf="parent"-->
        <!--                    app:layout_constraintRight_toRightOf="parent"/>-->
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/country_selector_cl"
        android:layout_width="match_parent"
        android:layout_height="164dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/white_rounded_square"
        android:padding="6dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/reg_country_cl">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/country_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/reg_guide_info_cl"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/edit_selector"
        android:paddingLeft="17dp"
        android:paddingRight="17dp"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/reg_country_cl">

        <TextView
            android:id="@+id/reg_guide_info_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/my_account_guide_info"
            android:textColor="@color/black5050"
            android:textSize="10sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/reg_guide_info_et"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="8dp"
            android:background="@null"
            android:hint="@string/guide_info_hint"
            android:lines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/reg_guide_info_tv" />
        <!--android:onTextChanged="@{activity::onTextChanged}"-->
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/reg_time_cl"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/edit_selector"
        android:paddingLeft="17dp"
        android:paddingRight="17dp"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/reg_guide_info_cl">

        <TextView
            android:id="@+id/reg_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/my_account_time"
            android:textColor="@color/black5050"
            android:textSize="10sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/reg_time_et"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="8dp"
            android:background="@null"
            android:hint="@string/time_hint"
            android:lines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/reg_time_tv" />
        <!--android:onTextChanged="@{activity::onTextChanged}"-->
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>