<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/default_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bg_height"
        android:background="@drawable/login_bg"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/logo"
        app:layout_constraintLeft_toLeftOf="@id/default_bg"
        app:layout_constraintRight_toRightOf="@id/default_bg"
        app:layout_constraintBottom_toTopOf="@id/default_app_name"/>
    <TextView
        android:id="@+id/default_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="GLA Talk"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginBottom="45dp"
        app:layout_constraintBottom_toBottomOf="@id/default_bg"
        app:layout_constraintLeft_toLeftOf="@id/default_bg"
        app:layout_constraintRight_toRightOf="@id/default_bg"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/layout_margin"
        android:layout_marginRight="@dimen/layout_margin"
        app:layout_constraintTop_toBottomOf="@id/default_bg"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/mail_auth_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineHeight="52sp"
            android:text="@string/welcome_register"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"/>

        <TextView
            android:id="@+id/mail_auth_info_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_register_complete"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:lineHeight="24sp"
            android:gravity="center"
            android:layout_marginTop="19dp"
            app:layout_constraintTop_toBottomOf="@+id/mail_auth_tv"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/back_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_square"
            android:lineHeight="22sp"
            android:text="@string/do_login"
            android:textColor="@color/white_text_color"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.75" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>